[package]
name = "skas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
serde = "1.0.145"
serde_json = "1.0.86"
kbs-types = { git = "https://github.com/tylerfanelli/kbs-types.git", branch = "snp", features = [ "tee-snp" ] }
curl = "0.4.44"
